Done some cleanup and added GetConfig endpoint
